// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/FormContent default 1`] = `
.c1 {
  display: block;
  font-weight: bold;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-top: 16px;
}

.c0 {
  padding: 16px 0;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    Label
  </label>
  <div
    className="c2"
  >
    FormContent
  </div>
</div>
`;

exports[`Storyshots Molecules/FormContent props children is Text 1`] = `
.c3 {
  display: block;
  box-sizing: border-box;
  margin: 0;
  padding: 8px 16px;
  border: solid 1px #d9d9d9;
  border-radius: 4px;
  font-size: 20px;
  color: $gray;
  line-height: 1em;
  width: 100%;
}

.c1 {
  display: block;
  font-weight: bold;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding-top: 16px;
}

.c0 {
  padding: 16px 0;
}

<div
  className="c0"
>
  <label
    className="c1"
  >
    Label
  </label>
  <div
    className="c2"
  >
    <input
      className="c3"
      type="text"
    />
  </div>
</div>
`;
